--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "geo-nearby": "^2.0.1",
     "geo-proximity": "^2.3.2",
     "geoip-lite": "^1.3.7",
+    "heroku": "^7.24.3",
     "http-errors": "~1.6.2",
     "iplocation": "^6.1.0",
     "ipstack": "^0.1.1",
